fix-feat/multi-account-feature-fixes
Addresses issues:
- #18 fix/returns not working in multi account
- #19 fix/multi account save behavior
- #20 fix/active account not persisted across sessions
- #21 fix/invalid credentials issue with only one account
- #17 feat/trim whitespace on credentials

Changes to be committed:
-	modified:   src/api.ts
-	modified:   src/options.ts
-	modified:   src/popup.ts
-	modified:   src/storage.ts
-	modified:   src/ux.ts
-	modified:   static/manifest.json
-	modified:   static/options.html
-	modified:   static/popup.html
-	modified:   static/sidepanel.html
-	modified:   styles/common.scss

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -157,12 +157,10 @@ li.item-1 {
   font-size: 11px;
 }
 
-.pl-header-text {
-    display: none;
-}
 
-#pwrd-by-pl {
-    display: none;
+//css hacks for returns plugin
+.pl-courier-name {
+     font-size: 14px !important;
 }
 
 .pl-header {
@@ -185,18 +183,26 @@ li.item-1 {
     flex: 0.5 !important;
 }
 
-.pl-order-information {
+h1.pl-header {
     display: none;
 }
 
-.pl-card-section--center {
+.pl-header-text {
     display: none;
 }
 
-.pl-courier-name {
-    font-size: 14px !important;
-}
-
-.pl-text-center.pl-header {
+#pwrd-by-pl {
     display: none;
 }
+
+// .pl-order-information {
+//     display: none;
+// }
+
+// .pl-card-section--center {
+//     display: none;
+// }
+
+// .pl-text-center.pl-header {
+//     display: none;
+// }
